app/assets/stylesheets/main.scss
/* ... */
.custom-container{
  max-width: 1140px;
  width: 100%;
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
  @media (min-width: 576px){
    max-width: 540px;
  }
  @media (min-width: 768px){
    max-width: 720px;
  }
  @media (min-width: 992px) {
    max-width: 960px;
  }
  @media (min-width: 1200px) {
    max-width: 1140px;
  }
}


.breadcrumbs-wrapper{
  width: 100%;
  padding: 12px 24px;
  list-style: none;
  margin: 0;
  display: flex;
  align-items: center;
  @media screen and (max-width:  767px){
    padding: 12px 16px;
  }
  li{
    background: #01A58A;
    position: relative;
    color: #ccc;
    font-size: 16px;
    height: 30px;
    display: flex;
    align-items: center;
    padding: 0 20px;
    margin-right: 28px;
    user-select: none;
    @media screen and (max-width:  767px){
      padding: 10px;
      font-size: 14px;
    }
    a{
      color: #fff;
    }
    &:first-child{
      border-radius: 4px 0 0 4px;
      &:before{
        display: none;
      }
    }
    &:before, &:after{
      content:  "";
      position: absolute;
      top: 0;
      display: block;
      background: #01A58A;
      width: 24px;
      height: 30px;
    }
    &:after{
      right: -23px;
      -webkit-clip-path: polygon(0% 0%, 0 0, 100% 50%, 0 100%, 0% 100%);
      clip-path: polygon(0% 0%, 0 0, 100% 50%, 0 100%, 0% 100%);
    }
    &:before{
      left: -24px;
      -webkit-clip-path: polygon(100% 0, 100% 50%, 100% 100%, 0% 100%, 100% 50%, 0% 0%);
      clip-path: polygon(100% 0, 100% 50%, 100% 100%, 0% 100%, 100% 50%, 0% 0%);
    }
  }
}

